--- a/MarioAI/.classpath
+++ b/MarioAI/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/LCA/Downloads/mario-missing-jar-files/jdom-1.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/LCA/Downloads/mario-missing-jar-files/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/LCA/Downloads/mario-missing-jar-files/testng-6.8.7.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/asm"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/Hlynur/Documents/JDM/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/Hlynur/Documents/JDM/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="/Users/Hlynur/Documents/JDM/testng-6.8.7.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/asm"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
